@@ -159,6 +159,63 @@ public abstract class BufferedIndexInput extends IndexInput implements RandomAcc
     }
   }
 
+  @Override
+  public void readFloats(float[] dst, int offset, int len) throws IOException {
+    int remainingDst = len;
+    while (remainingDst > 0) {
+      int cnt = Math.min(buffer.remaining() / Float.BYTES, remainingDst);
+      buffer.asFloatBuffer().get(dst, offset + len - remainingDst, cnt);
+      buffer.position(buffer.position() + Float.BYTES * cnt);
+      remainingDst -= cnt;
+      if (remainingDst > 0) {
+        if (buffer.hasRemaining()) {
+          dst[offset + len - remainingDst] = Float.intBitsToFloat(readInt());
+          --remainingDst;
+        } else {
+          refill();
+        }
+      }
+    }
+  }
+
+  @Override
+  public void readLongs(long[] dst, int offset, int len) throws IOException {
+    int remainingDst = len;
+    while (remainingDst > 0) {
+      int cnt = Math.min(buffer.remaining() / Long.BYTES, remainingDst);
+      buffer.asLongBuffer().get(dst, offset + len - remainingDst, cnt);
+      buffer.position(buffer.position() + Long.BYTES * cnt);
+      remainingDst -= cnt;
+      if (remainingDst > 0) {
+        if (buffer.hasRemaining()) {
+          dst[offset + len - remainingDst] = readLong();
+          --remainingDst;
+        } else {
+          refill();
+        }
+      }
+    }
+  }
+
+  @Override
+  public void readInts(int[] dst, int offset, int len) throws IOException {
+    int remainingDst = len;
+    while (remainingDst > 0) {
+      int cnt = Math.min(buffer.remaining() / Integer.BYTES, remainingDst);
+      buffer.asIntBuffer().get(dst, offset + len - remainingDst, cnt);
+      buffer.position(buffer.position() + Integer.BYTES * cnt);
+      remainingDst -= cnt;
+      if (remainingDst > 0) {
+        if (buffer.hasRemaining()) {
+          dst[offset + len - remainingDst] = readInt();
+          --remainingDst;
+        } else {
+          refill();
+        }
+      }
+    }
+  }
+
   // Computes an offset into the current buffer from an absolute position to read
   // `width` bytes from.  If the buffer does not contain the position, then we
   // readjust the bufferStart and refill.
